Update .gitignore, add main function to app.py
__pycache__ popped up, so I found a .gitignore template for python and
added it to .gitignore. I also added a main function to app.py.
Considering making app.py oop.

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
             <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
               <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
                 <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
-                <span class="fs-4">Simple header</span>
+                <span class="fs-4">Fossil Fuels Impact Project</span>
               </a>
         
               <ul class="nav nav-pills">
@@ -41,7 +41,7 @@
             </div>
 
             <!-- Add link to bonus -->
-            <p> Click <a href="/api/v1.0/consumption">here</a> to visit the fossil fuel consumption page!</p>
+            <p> Click <a href={{content_1_location}}>here</a> to visit the {{content_1_title}} page!</p>
 
         </div>
     </body>
