--- a/templates/index.html
+++ b/templates/index.html
@@ -56,16 +56,23 @@
       <div class="row">
         <div class="col-md-2">
           <div class="well">
-            <h5>Selct a Country.:</h5>
+            <h5>Select a Country.:</h5>
             <select id="selDataset" onchange="optionChanged(this.value)"></select>
           </div>
           
         </div>
-        <div class="col-md-5">
+        <div class="col-md-2">
+            <div class="well">
+              <h5>Selct year range.:</h5>
+              <select id="selYear" onchange="optionChanged(this.value)"></select>
+            </div>
+            
+          </div>
+        <div class="col-md-4">
           <div id="bar"></div>
         </div>
-        <div class="col-md-5">
-          <div id="gauge"></div>
+        <div class="col-md-4">
+          <div id="bar"></div>
         </div>
       </div>
       <div class="row">
