--- a/templates/index.html
+++ b/templates/index.html
@@ -56,14 +56,14 @@
       <div class="row">
         <div class="col-md-2">
           <div class="well">
-            <h5>Select a Country.:</h5>
+            <h5>Select Country:</h5>
             <select id="selDataset" onchange="optionChanged(this.value)"></select>
           </div>
           
         </div>
         <div class="col-md-2">
             <div class="well">
-              <h5>Selct year range.:</h5>
+              <h5>Select Years:</h5>
               <select id="selYear" onchange="optionChanged(this.value)"></select>
             </div>
             
