Chcking in the code for a basic line chart for GDP

--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,7 @@
         <div class="col-md-2">
           <div class="well">
             <h5>Select Country:</h5>
-            <select id="selDataset" onchange="optionChanged(this.value)"></select>
+            <select id="selCountry" onchange="optionChanged(this.value)"></select>
           </div>
           
         </div>
@@ -69,7 +69,7 @@
             
           </div>
         <div class="col-md-4">
-          <div id="bar"></div>
+          <div id="gdp-line"></div>
         </div>
         <div class="col-md-4">
           <div id="bar"></div>
