Add onChange logic for the drop downs

--- a/templates/index.html
+++ b/templates/index.html
@@ -64,7 +64,7 @@
         <div class="col-md-6">
             <div class="well">
               <h5>Select Years:</h5>
-              <select id="selYear" onchange="YearsOptionChanged(this.value)"></select>
+              <select id="selYear" onchange="yearsOptionChanged(this.value)"></select>
             </div> 
         </div> 
       </div>
