--- a/templates/index.html
+++ b/templates/index.html
@@ -1,57 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="author" content="Jennifer Long, Danelle Cook, Chineze Okpala, Hari Somayajula, Abishua Prashanth, and Randy Weaver">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Fossil Fuel and Greenhouse Gas Dashboard Landing Page</title>
-        <link href="https://getbootstrap.com/docs/5.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    </head>
+  <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="author" content="Jennifer Long, Danelle Cook, Chineze Okpala, Hari Somayajula, Abishua Prashanth, and Randy Weaver">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Fossil Fuel and Greenhouse Gas Dashboard Landing Page</title>
+  <link href="https://getbootstrap.com/docs/5.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
+  <script src = "https://cdnjs.cloudflare.com/ajax/libs/granim/2.0.0/granim.js"></script>
+  <canvas id="canvas-basic"></canvas>
+  </head>
 
-    <body>
-        <div class="container">
-            <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-              <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-                <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
-                <!--<span class="fs-4">Fossil Fuels Impact Project</span>-->
-              </a>
-        
-              <ul class="nav nav-pills">
-                <li class="nav-item"><a href="/" class="nav-link active" aria-current="page">Home</a></li>
-                <li class="nav-item"><a href={{content_1_location}} class="nav-link">{{content_1_title}}</a></li>
-                <li class="nav-item"><a href={{content_2_location}} class="nav-link">{{content_2_title}}</a></li>
-                <li class="nav-item"><a href="https://github.com/randallwvr90/fossil-fuels-and-greenhouse-gas" class="nav-link">About</a></li>
+  <body>
+    <script>
+      var granimInstance = new Granim({
+          element: '#canvas-basic',
+          direction: 'left-right',
+          isPausedWhenNotInView: true,
+          states : {
+              "default-state": {
+                  gradients: [
+                      ['#ff9966', '#ff5e62'],
+                      ['#00F260', '#0575E6'],
+                      ['#e1eec3', '#f05053']
+                  ]
+              }
+          }
+      });
+    </script>
+    <div class="container">
+          <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+            <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+              <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
+              <!--<span class="fs-4">Fossil Fuels Impact Project</span>-->
+            </a>
+      
+            <ul class="nav nav-pills">
+              <li class="nav-item"><a href="/" class="nav-link active" aria-current="page">Home</a></li>
+              <li class="nav-item"><a href={{content_1_location}} class="nav-link">{{content_1_title}}</a></li>
+              <li class="nav-item"><a href={{content_2_location}} class="nav-link">{{content_2_title}}</a></li>
+              <li class="nav-item"><a href="https://github.com/randallwvr90/fossil-fuels-and-greenhouse-gas" class="nav-link">About</a></li>
+            </ul>
+          </header>
+      </div>
+    <div class="container">
+  <!--
+          <div class="jumbotron text-center">
+
+              
+              <h1>{{ heading }}</h1>
+              <h2>{{ heading2 }}</h2>
+              <ul>
+                  <li>{{ content_1_location }}</li> 
+                  <li>{{ content_2_location }}</li>
               </ul>
-            </header>
-        </div>
-        <div class="container">
-    <!--
-            <div class="jumbotron text-center">
 
-               
-                <h1>{{ heading }}</h1>
-                <h2>{{ heading2 }}</h2>
-                <ul>
-                    <li>{{ content_1_location }}</li> 
-                    <li>{{ content_2_location }}</li>
-                </ul>
+          </div>
 
-            </div>
+          
+          <p> Click <a href={{content_1_location}}>here</a> to visit the {{content_1_title}} page!</p>
 
-            
-            <p> Click <a href={{content_1_location}}>here</a> to visit the {{content_1_title}} page!</p>
+      </div>
 
-        </div>
+  -->
 
-    -->
-
-    <div class="row">
-        <div class="col-md-12 jumbotron text-center">
-          <h1>Fuel Consumption and Production Impact</h1>
-          <p>Use the interactive charts below to explore the dataset</p>
-        </div>
+      <div class="row">
+          <div class="col-md-12 jumbotron text-center">
+            <h1>Fuel Consumption and Production Impact</h1>
+            <p>Use the interactive charts below to explore the dataset</p>
+          </div>
       </div>
       <div class="row">
         <div class="col-md-2">
@@ -59,34 +78,34 @@
             <h5>Select Country:</h5>
             <select id="selDataset" onchange="optionChanged(this.value)"></select>
           </div>
-          
         </div>
-        <div class="col-md-2">
-            <div class="well">
-              <h5>Select Years:</h5>
-              <select id="selYear" onchange="optionChanged(this.value)"></select>
-            </div>
-            
-          </div>
-        <div class="col-md-4">
-          <div id="bar"></div>
-        </div>
-        <div class="col-md-4">
-          <div id="bar"></div>
-        </div>
+      </div>
+      <div class="col-md-2">
+          <div class="well">
+            <h5>Select Years:</h5>
+            <select id="selYear" onchange="optionChanged(this.value)"></select>
+          </div>   
+      </div>
+      <div class="col-md-4">
+        <div id="bar"></div>
+      </div>
+      <div class="col-md-4">
+        <div id="bar"></div>
       </div>
       <div class="row">
         <div class="col-md-12">
           <div id="bubble"></div>
         </div>
       </div>
+    </div>
+
+  <!-- <script src="https://d3js.org/d3.v5.min.js"></script> -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+  <!--script src="granim.js-2.0.0/dist/granim.js"></script>-->
+  <script src="{{url_for('static', filename='app.js')}}"></script>
 
 
-    <!-- <script src="https://d3js.org/d3.v5.min.js"></script> -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-    <script src="{{url_for('static', filename='app.js')}}"></script>
-    
-    </body>
+  </body>
 
 </html>
