--- a/templates/map_page.html
+++ b/templates/map_page.html
@@ -61,16 +61,103 @@
             fill: true,
             fillColor: '#fff',
             fillOpacity: 1
-        }
+        };
+        var emissionsJSONPath = '/api/v1.0/get_global_emissions';
+        var sampleEmissions = 
+
         $.getJSON(myGeoJSONPath,function(data){
             console.log(data)
             var map = L.map('map').setView([30, 0], 2);
 
-            L.geoJson(data, {
-                clickable: false,
-                style: myCustomStyle
-            }).addTo(map);
-        })
+
+
+            // Getting our GeoJSON data
+            d3.json(emissionsJSONPath).then(function(data2) {
+                // Creating a GeoJSON layer with the retrieved data
+                L.geoJson(data, {
+                    style: function(feature) {
+                        console.log(feature)
+                        return {
+                            color: "white",
+                            // Call the chooseColor() function to decide which color to color our neighborhood. (The color is based on the borough.)
+                            fillColor: chooseColor(data2, feature.properties.iso_n3),
+                            fillOpacity: 0.5,
+                            weight: 1.5
+                        };
+                    },
+                    // Styling each feature (in this case, a neighborhood)
+                    /* style: function(emissions) {
+                        return {
+                            color: "white",
+                            fill: true,
+                            stroke: false,
+                            // Call the chooseColor() function to decide which color to color our neighborhood. (The color is based on the borough.)
+                            fillColor: "black",//chooseColor(emissions[0]),
+                            fillOpacity: 0.5,
+                            weight: 1.5
+                        };
+                    } */
+
+                    // The block below will set up mouse events!
+                    /* // This is called on each feature.
+                    onEachFeature: function(feature, layer) {
+                    // Set the mouse events to change the map styling.
+                    layer.on({
+                        // When a user's mouse cursor touches a map feature, the mouseover event calls this function, which makes that feature's opacity change to 90% so that it stands out.
+                        mouseover: function(event) {
+                        layer = event.target;
+                        layer.setStyle({
+                            fillOpacity: 0.9
+                        });
+                        },
+                        // When the cursor no longer hovers over a map feature (that is, when the mouseout event occurs), the feature's opacity reverts back to 50%.
+                        mouseout: function(event) {
+                        layer = event.target;
+                        layer.setStyle({
+                            fillOpacity: 0.5
+                        });
+                        },
+                        // When a feature (neighborhood) is clicked, it enlarges to fit the screen.
+                        click: function(event) {
+                        myMap.fitBounds(event.target.getBounds());
+                        }
+                    });
+                    // Giving each feature a popup with information that's relevant to it
+                    layer.bindPopup("<h1>" + feature.properties.neighborhood + "</h1> <hr> <h2>" + feature.properties.borough + "</h2>");
+
+                    } */
+                }).addTo(map);
+            });
+
+            // L.geoJson(data, {
+            //     clickable: false,
+            //     style: myCustomStyle
+            // }).addTo(map);
+        });
+        // The function that will determine the color of a neighborhood based on the borough that it belongs to
+        function chooseColor(data2, countryCode) {
+            emissions = getEmissions(data2, countryCode);
+            console.log(emissions)
+            if (emissions > 5000) return "#a60202";
+            else if (emissions > 4000) return "#FC0303";
+            else if (emissions > 3500) return "#FA6800";
+            else if (emissions > 3000) return "#FAB700";
+            else if (emissions > 2500) return "#FAED00";
+            else if (emissions > 2000) return "#ABFA00";
+            else if (emissions > 1500) return "#00FA0C";
+            else if (emissions > 1000) return "#00FACC";
+            else if (emissions > 500) return "#00CCFA";
+            else if (emissions >= 0) return "#0008fa";
+            else return "white";
+        }
+        function getEmissions(data2, countryCode) {
+            console.log(countryCode)
+            for (let i=0; i<data2.length; i++) {
+                if (data2[i][1] == countryCode) {
+                    return data2[i][0]
+                }
+            }
+        }
     </script>
 </body>
 </html>
