--- a/templates/allYears3.html
+++ b/templates/allYears3.html
@@ -40,10 +40,12 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-12">
           <div id="allConsumption-line"></div>
         </div>
-        <div class="col-md-6">
+      </div>
+      <div class="row">     
+        <div class="col-md-12">
           <div id="allEmissions-line"></div>
         </div>
       </div>
