--- a/templates/map_page.html
+++ b/templates/map_page.html
@@ -49,10 +49,23 @@
             </ul>
         </header>
     </div>
+    <div class="row">
 
-    <div id="map" style="width: 1200px; height: 800px"></div>
+        <div class="col-md-4">
+          <div class="well">
+            <h5>Select Year:</h5>
+            <select id="selectYear" onchange="countryChanged(this.value)"></select>
+          </div>
+    </div>
+    <hr>
+    <div class="row">
+        <div class="col-md-12">
+            <div id="map" style="width: 1200px; height: 800px"></div>
+        </div>
+    </div>
 
     <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="{{url_for('static', filename='map.js')}}"></script>
     <!-- <script src="http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.js"></script> -->
     <script>
         var myGeoJSONPath = '/api/low_res_world';
