--- a/templates/map_page.html
+++ b/templates/map_page.html
@@ -59,7 +59,7 @@
     </div>
     <hr>
     <div class="row">
-        <div class="col-md-12">
+        <div id="emissionsMap" class="col-md-12">
             <div id="map" style="width: 1200px; height: 800px"></div>
         </div>
     </div>
