--- a/templates/index.html
+++ b/templates/index.html
@@ -53,14 +53,18 @@
         <div class="col-md-6">
           <div class="well">
             <h5><b>Select Country:</b></h5>
-            <select id="selCountry" onchange="countryOptionChanged(this.value)"></select>
+            <select id="selCountry" onchange="countryOptionChanged(this.value)">
+              <option value="US" selected>US</option>
+            </select>
           </div>
           
         </div>
         <div class="col-md-6">
             <div class="well">
               <h5><b>Select Years:</b></h5>
-              <select id="selYear" onchange="yearsOptionChanged(this.value)"></select>
+              <select id="selYear" onchange="yearsOptionChanged(this.value)">
+                <option value="2005-2015" selected>2005-2015</option>
+              </select>
             </div> 
         </div> 
       </div>
