Update allYears page box default to US

--- a/templates/allYears3.html
+++ b/templates/allYears3.html
@@ -35,7 +35,9 @@
         <div class="col-md-6">
           <div class="well">
             <h5><b>Select Country:</b></h5>
-            <select id="selCountry2" onchange="countryOptionChanged2(this.value)"></select>
+            <select id="selCountry2" onchange="countryOptionChanged2(this.value)">
+              <option value="US" selected>US</option>
+            </select>
           </div>
           
         </div>
